test/fail/asyncret2.mo
func call3(f : shared () -> async Int) : async Int { f(); };
